--- a/test-framework-golden.cabal
+++ b/test-framework-golden.cabal
@@ -4,7 +4,13 @@
 name:                test-framework-golden
 version:             1.0.1
 synopsis:            Golden tests support for test-framework
--- description:         
+description:
+  This package provides support for «golden testing».
+
+  A golden test is an IO action that writes its result to a file.
+  To pass the test, this output file should be identical to the corresponding
+  «golden» file, which contains the correct result for the test.
+
 license:             MIT
 license-file:        LICENSE
 author:              Roman Cheplyaka
