--- a/test-framework-golden.cabal
+++ b/test-framework-golden.cabal
@@ -21,7 +21,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Test.Framework.Providers.Golden,
-                       Test.Framework.Providers.Golden.Advanced
+  exposed-modules:     Test.Golden,
+                       Test.Golden.Advanced
 -- other-modules:
   build-depends:       base ==4.*, test-framework, bytestring, process
