Test.Golden.Internal

--- a/test-framework-golden.cabal
+++ b/test-framework-golden.cabal
@@ -34,5 +34,6 @@ Source-repository this
 library
   exposed-modules:     Test.Golden,
                        Test.Golden.Advanced
--- other-modules:
+  other-modules:
+                       Test.Golden.Internal
   build-depends:       base ==4.*, test-framework, bytestring, process
