--- a/test-framework-golden.cabal
+++ b/test-framework-golden.cabal
@@ -2,7 +2,7 @@
 -- further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                test-framework-golden
-version:             1.1.1
+version:             1.1.2
 synopsis:            Golden tests support for test-framework
 description:
   This package provides support for «golden testing».
@@ -29,7 +29,7 @@ Source-repository head
 Source-repository this
   type:     git
   location: git://github.com/feuerbach/test-framework-golden.git
-  tag:      v1.1.1
+  tag:      v1.1.2
 
 library
   exposed-modules:     Test.Golden
@@ -37,4 +37,4 @@ library
                        Test.Golden.Console
   other-modules:
                        Test.Golden.Internal
-  build-depends:       base ==4.*, test-framework, bytestring, process, mtl
+  build-depends:       base ==4.*, test-framework >= 0.8.1, bytestring, process, mtl
