Test.Golden.Manage

--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -32,6 +32,7 @@ library
   exposed-modules:     Test.Golden
                        Test.Golden.Advanced
                        Test.Golden.Console
+                       Test.Golden.Manage
   other-modules:
                        Test.Golden.Internal
   build-depends:
