--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -1,5 +1,5 @@
 name:                tasty-golden
-version:             2.0
+version:             2.0.1
 synopsis:            Golden tests support for tasty
 description:
   This package provides support for «golden testing».
@@ -31,7 +31,7 @@ library
                        Test.Tasty.Golden.Internal
   build-depends:
     base ==4.*,
-    tasty,
+    tasty >= 0.2,
     bytestring,
     process,
     mtl,
