--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -18,6 +18,7 @@ maintainer:          Roman Cheplyaka <roma@ro-che.info>
 category:            Testing
 build-type:          Simple
 cabal-version:       >=1.8
+extra-source-files:  CHANGELOG.md
 
 Source-repository head
   type:     git
