--- a/test-framework-golden.cabal
+++ b/test-framework-golden.cabal
@@ -36,4 +36,4 @@ library
                        Test.Golden.Advanced
   other-modules:
                        Test.Golden.Internal
-  build-depends:       base ==4.*, test-framework >= 0.8, temporary >= 1.1, bytestring, filepath, process, mtl
+  build-depends:       base >= 4.5 && < 5, test-framework >= 0.8, temporary >= 1.1, bytestring, filepath, process, mtl
