--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -17,7 +17,7 @@ maintainer:          Roman Cheplyaka <roma@ro-che.info>
 -- copyright:           
 category:            Testing
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.10
 extra-source-files:  CHANGELOG.md
 
 Source-repository head
@@ -25,6 +25,8 @@ Source-repository head
   location: git://github.com/feuerbach/tasty-golden.git
 
 library
+  Default-language:
+    Haskell2010
   exposed-modules:     Test.Tasty.Golden
                        Test.Tasty.Golden.Advanced
                        Test.Tasty.Golden.Manage
@@ -41,3 +43,19 @@ library
     temporary >= 1.1,
     tagged,
     deepseq
+
+Test-suite test
+  Default-language:
+    Haskell2010
+  Type:
+    exitcode-stdio-1.0
+  Hs-source-dirs:
+    tests
+  Main-is:
+    test.hs
+  Build-depends:
+      base >= 4 && < 5
+    , tasty >= 0.7
+    , tasty-hunit
+    , bytestring
+    , tasty-golden
