--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -36,19 +36,21 @@ library
   ghc-options: -Wall
 
   build-depends:
-    base ==4.*,
-    tasty >= 0.8,
-    bytestring,
-    process,
-    mtl,
-    optparse-applicative,
-    filepath,
-    temporary-rc,
-    tagged,
-    deepseq,
-    containers,
-    directory,
-    async
+      base ==4.*
+    , tasty >= 0.8
+    , bytestring
+    , process >= 1.2.0.0 && < 1.3
+    , mtl
+    , optparse-applicative
+    , filepath
+    , temporary-rc
+    , tagged
+    , deepseq
+    , containers
+    , directory
+    , async
+    , text >= 0.11.0.0 && < 1.3
+    , process-extras >= 0.2 && < 0.3
 
 Test-suite test
   Default-language:
