--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -51,6 +51,7 @@ library
     , async
     , text >= 0.11.0.0 && < 1.3
     , process-extras >= 0.2 && < 0.3
+    , attoparsec >= 0.12 && < 0.13
 
 Test-suite test
   Default-language:
@@ -66,7 +67,11 @@ Test-suite test
     , tasty >= 0.8
     , tasty-hunit
     , tasty-golden
+    , tasty-quickcheck >= 0.8 && < 1.0
     , filepath
     , directory
     , process
+    , text >= 0.11.0.0 && < 1.3
     , temporary-rc
+    , QuickCheck >= 2.7 && < 3.0
+    , attoparsec >= 0.12 && < 0.13
