--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -48,7 +48,9 @@ library
     deepseq,
     containers,
     directory,
-    async
+    async,
+    text >= 0.11.0.0 && < 1.3,
+    process-extras >= 0.2 && < 0.3
 
 Test-suite test
   Default-language:
