--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -40,7 +40,7 @@ library
     base ==4.*,
     tasty >= 0.8,
     bytestring,
-    process,
+    process >= 1.2 && < 1.3,
     mtl,
     optparse-applicative,
     filepath,
