--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -1,5 +1,5 @@
 name:                tasty-golden
-version:             2.3.0.1
+version:             2.3.1
 synopsis:            Golden tests support for tasty
 description:
   This package provides support for «golden testing».
@@ -14,7 +14,7 @@ Homepage:            https://github.com/feuerbach/tasty-golden
 Bug-reports:         https://github.com/feuerbach/tasty-golden/issues
 author:              Roman Cheplyaka
 maintainer:          Roman Cheplyaka <roma@ro-che.info>
--- copyright:           
+-- copyright:
 category:            Testing
 build-type:          Simple
 cabal-version:       >=1.14
@@ -39,8 +39,9 @@ library
     base ==4.*,
     tasty >= 0.8,
     bytestring >= 0.10,
+    pretty,
+    Diff >= 0.3.1,
     process,
-    mtl,
     optparse-applicative,
     filepath,
     temporary-rc,
@@ -62,6 +63,7 @@ Test-suite test
   Build-depends:
       base >= 4 && < 5
     , tasty >= 0.8
+    , bytestring >= 0.10
     , tasty-hunit
     , tasty-golden
     , filepath
