--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -39,6 +39,7 @@ library
     base ==4.*,
     tasty >= 0.8,
     bytestring >= 0.10,
+    text,
     pretty,
     Diff >= 0.3.1,
     process,
@@ -64,6 +65,7 @@ Test-suite test
       base >= 4 && < 5
     , tasty >= 0.8
     , bytestring >= 0.10
+    , text
     , tasty-hunit
     , tasty-golden
     , filepath
