--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -43,7 +43,7 @@ library
     mtl,
     optparse-applicative,
     filepath,
-    temporary-rc,
+    temporary,
     tagged,
     deepseq,
     containers,
