--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -1,5 +1,5 @@
 name:                tasty-golden
-version:             2.3.1.2
+version:             2.3.1.3
 synopsis:            Golden tests support for tasty
 description:
   This package provides support for «golden testing».
@@ -40,7 +40,7 @@ library
 
   build-depends:
     base ==4.*,
-    tasty >= 0.8,
+    tasty >= 1.0.1,
     bytestring >= 0.10,
     process,
     mtl,
@@ -64,7 +64,7 @@ Test-suite test
     test.hs
   Build-depends:
       base >= 4 && < 5
-    , tasty >= 0.8
+    , tasty
     , tasty-hunit
     , tasty-golden
     , filepath
