--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -22,6 +22,12 @@ category:            Testing
 build-type:          Simple
 cabal-version:       >=1.14
 extra-source-files:  CHANGELOG.md
+Tested-With:
+  GHC ==8.0.2 ||
+      ==8.2.2 ||
+      ==8.4.4 ||
+      ==8.6.5 ||
+      ==8.8.2
 
 Source-repository head
   type:     git
