--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -27,9 +27,7 @@ extra-source-files:
   example/golden/success/*.golden
   tests/golden/*.golden
 Tested-With:
-  GHC ==7.4.2 ||
-      ==7.6.3 ||
-      ==7.8.4 ||
+  GHC ==7.8.4 ||
       ==7.10.3 ||
       ==8.0.2 ||
       ==8.2.2 ||
@@ -53,7 +51,7 @@ library
   ghc-options: -Wall
 
   build-depends:
-    base ==4.*,
+    base >= 4.7,
     tasty >= 1.0.1,
     bytestring >= 0.9.2.1,
     process,
