--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -54,7 +54,7 @@ library
     base >= 4.7,
     tasty >= 1.3,
     bytestring >= 0.9.2.1,
-    process,
+    process >= 1.6.10.0,
     mtl,
     optparse-applicative >= 0.3.1,
     filepath,
@@ -87,6 +87,7 @@ Test-suite test
     , temporary
   if (flag(build-example))
     cpp-options: -DBUILD_EXAMPLE
+  Ghc-options: -threaded
 
 flag build-example
   default: False
@@ -112,3 +113,4 @@ executable example
     , bytestring
     , tasty
     , tasty-golden
+  Ghc-options: -threaded
