--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -54,7 +54,7 @@ library
     base >= 4.7,
     tasty >= 1.3,
     bytestring >= 0.9.2.1,
-    process >= 1.6.10.0,
+    process,
     mtl,
     optparse-applicative >= 0.3.1,
     filepath,
