--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -54,7 +54,7 @@ library
     base >= 4.7,
     tasty >= 1.3,
     bytestring >= 0.9.2.1,
-    process,
+    typed-process,
     mtl,
     optparse-applicative >= 0.3.1,
     filepath,
@@ -83,7 +83,7 @@ Test-suite test
     , tasty-golden
     , filepath
     , directory
-    , process
+    , typed-process
     , temporary
   if (flag(build-example))
     cpp-options: -DBUILD_EXAMPLE
