--- a/tasty-golden.cabal
+++ b/tasty-golden.cabal
@@ -1,3 +1,4 @@
+cabal-version:       1.14
 name:                tasty-golden
 version:             2.3.5
 synopsis:            Golden tests support for tasty
@@ -20,24 +21,29 @@ maintainer:          Roman Cheplyaka <roma@ro-che.info>
 -- copyright:
 category:            Testing
 build-type:          Simple
-cabal-version:       1.14
 extra-source-files:
   CHANGELOG.md
   example/golden/fail/*.golden
   example/golden/success/*.golden
   tests/golden/*.golden
-Tested-With:
-  GHC ==7.8.4 ||
-      ==7.10.3 ||
-      ==8.0.2 ||
-      ==8.2.2 ||
-      ==8.4.4 ||
-      ==8.6.5 ||
-      ==8.8.2
+
+tested-with:
+  GHC == 9.10.1
+  GHC == 9.8.2
+  GHC == 9.6.6
+  GHC == 9.4.8
+  GHC == 9.2.8
+  GHC == 9.0.2
+  GHC == 8.10.7
+  GHC == 8.8.4
+  GHC == 8.6.5
+  GHC == 8.4.4
+  GHC == 8.2.2
+  GHC == 8.0.2
 
 Source-repository head
   type:     git
-  location: git://github.com/UnkindPartition/tasty-golden.git
+  location: https://github.com/UnkindPartition/tasty-golden.git
 
 library
   Default-language:
@@ -53,7 +59,7 @@ library
   ghc-options: -Wall
 
   build-depends:
-    base >= 4.7,
+    base >= 4.7 && < 5,
     tasty >= 1.3,
     bytestring >= 0.9.2.1,
     typed-process,
